# synthesizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/synthesizer/: generate.py  load.py
